# gcp-document-intelligence-system

./: .gitignore  Agentic System Design.md  Dockerfile  Future Production Scope and Improvements.md  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py  logging_config.py  utils.py
app/models/: api.py  document.py
app/processing/: baseline.py  chunking.py  cleaning.py  pipeline.py  prompts.py
app/services/: bigquery_service.py  dlp_service.py  docai_service.py  gcs_service.py  gemini_service.py  nl_service.py
infra/bigquery/: 00_dataset.sql  01_doc_cache.sql  02_hn_corpus.sql  03_processed_docs.sql  04_run_logs.sql  05_runs.sql
tests/: test_chunking.py  test_cleaning.py  test_schema.py  test_utils.py
ui/: streamlit_app.py
